re PR c++/53599 (gcc-4.7.1_rc20120606 segfaults compiling boost.karma)

PR c++/53599
	Revert:
	PR c++/53137
	* pt.c (instantiate_class_template_1): Set LAMBDA_EXPR_THIS_CAPTURE.
	(instantiate_decl): Don't push_to_top_level for local class methods.
	(instantiate_class_template_1): Or for local classes.

From-SVN: r188460